--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
         <button class="btn s-btn">Отправить</button>
     </form>
 
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
     <script>
         let tg = window.Telegram.WebApp;
 
